--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="login-screen">
         <h2>🔒 Acceso Privado</h2>
-        <input type="password" id="password-input" placeholder="Contraseña..." autocomplete="off">
+        <input type="password" id="password-input" placeholder="Contraseña..." autocomplete="on">
         <button id="login-btn">Entrar</button>
         <p id="login-error">Contraseña incorrecta</p>
     </div>
