--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosco & Lógica 1%</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="scrpit.js"></scrpit>
 </head>
 <body>
-
-    <div id="login-screen">
-        <h2>🔒 Acceso Privado</h2>
-        <input type="password" id="password-input" placeholder="Contraseña..." autocomplete="off">
-        <button id="login-btn">Entrar</button>
-        <p id="login-error">Contraseña incorrecta</p>
-    </div>
 
     <div id="main-menu" class="hidden">
         <h1>Selecciona el Reto</h1>
