--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosco & Lógica 1%</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="scrpit.js"></script>
+    <script defer src="script2.js"></script>
 </head>
 <body>
 
